# animl-py

./: .flake8  .gitignore  LICENSE  README.md  environment.yml  exp_resnet18.yaml  pyproject.toml  setup.cfg
examples/: Motion Detection.ipynb  animl.yml  detections_plotBoxes.csv  plot_boxes.py  run_plotboxes.py
examples/Cats_vs_Dogs/: cat_dog_labels.csv  cat_dog_train.yml  test_data.csv  train_data.csv  validate_data.csv
examples/Jaguar/: reid_manifest.csv
examples/Peru/S90/SDZG 2/Animl-Directory/Data/: FileManifest.csv  ImageFrames.csv  mdresults.csv
examples/Southwest/Animl-Directory/Data/: Detections.csv  FileManifest.csv  ImageFrames.csv  Predictions.csv  Results.csv  mdresults.csv
notebooks/: Model Conversion.ipynb  Sandbox.ipynb  Test.ipynb  Training.ipynb  model_conversion.ipynb  torch2onnx.ipynb  torch2onnx.py
src/: custom_yolo.yaml
src/animl/: CTLClassifier.py  Custom_yolo_run.py  Demo.ipynb  FileManagement.py  ImageCropGenerator.py  Labeled box.ipynb  Motion Detection.ipynb  Sandbox.ipynb  Test.ipynb  Untitled.ipynb  ZooniverseAPI.py  __init__.py  __main__.py  animl_results_to_md_results.py  animl_to_md.py  classification.py  classifiers.py  classify.py  custom_detector.py  custom_yolo.yaml  custom_yolo_run.py  detect.py  detectMD.py  detection.py  export.py  extractFrames.py  fileManagement.py  file_management.py  generator.py  imageCropGenerator.py  imageUtils.py  inference.py  link.py  loadMD.py  main_imageproc.py  matchypatchy.py  megadetector.py  model.py  model_architecture.py  multi_specie_detection.py  (+22 more)
src/animl/api/: __init__.py  animl_to_md.py  camerabase.py  matchypatchy.py  timelapse.py  zooniverse.py
src/animl/config/: README.md  animl.yml  classification.yml  custom_yolo.yaml  train.yml
src/animl/models/: Owl_detector.py  __init__.py  common.py  custom_detector.py  download.py  megadetector.py  todo.py  yolo.py
src/animl/models/CatDog/: train.csv  val.csv
src/animl/pose/: __init__.py  convert_to_csv.py  predict.py  preprocessing.py  train.py  viewpoint.py
src/animl/reid/: __init__.py  distance.py  generator.py  heads.py  inference.py  miewid.py  viewpoint.py
src/animl/utils/: __init__.py  augmentations.py  dataloaders.py  general.py  metrics.py  plots.py  torch.py  torch_utils.py  train_utils.py  visualization.py  yolo5.py
tests/: buow_test.py  main_test.py  megadetector_test.py  model_training_test.py  onnx_export_test.py  onnx_miew_test.py  onnx_test.py  reid_test.py
tests/GroundTruth/buow/: buow_detections.csv
tests/GroundTruth/main/: Detections.csv  FileManifest.csv  ImageFrames.csv  Predictions.csv  Results.csv
tests/GroundTruth/md/: md_gt.json
tests/GroundTruth/reid/: batched.npy  cos.npy  e2.npy
