[project]
name = "animl"  
version = "3.1.1"
description = "Tools for classifying camera trap images"  

readme = "README.md" 
license = {file = "LICENSE.txt"}
keywords = ["camera trap", "ecology", "conservation", "zoo", "SDZWA", "conservationtechlab"] 

authors = [{name = "Kyra Swanson", email = "tswanson@sdzwa.org" }]

requires-python = ">=3.12"
dependencies = [
    "dill>=0.4.0",
    "numpy>=2.0.2", 
    "onnxruntime-gpu>=1.23.2", 
    "pandas>=2.2.2", 
    "pillow>=11.0.0", 
    "opencv-python>=4.12.0.88", 
    "scikit-learn>=1.5.2", 
    "timm>=1.0.9",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.66.5",
    "ultralytics>=8.3.95",
    "wget>=3.2"
]
[project.optional-dependencies]
mlops = [
    "comet-ml>=3.54.2", 
]

[project.urls]  # Optional
"Homepage" = "https://github.com/conservationtechlab/animl-py"


[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
